--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ outputs:
     description: 'A string description of any actions taken.'
 runs:
   using: 'node12'
-  main: 'index.js'
+  main: 'src/needs-attention.js'
 branding:
   icon: 'flag'  
   color: 'red'
