--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "needs-attention",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A GitHub Action that flags issues that need attention.",
+  "author": "Héctor Ramos, Pranav Yadav",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/hramos/needs-attention/issues"
+  },
+  "homepage": "https://github.com/hramos/needs-attention#readme",
   "main": "index.js",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier --write \"./**/*.{js,md,yml,ts}\"",
+    "format-check": "prettier --list-different \"./**/*.{js,md,yml,ts}\""
   },
   "repository": {
     "type": "git",
@@ -14,14 +25,11 @@
     "actions",
     "needs attention"
   ],
-  "author": "Héctor Ramos",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hramos/needs-attention/issues"
-  },
-  "homepage": "https://github.com/hramos/needs-attention#readme",
   "dependencies": {
-    "@actions/core": "^1.9.1",
-    "@actions/github": "^2.1.1"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8"
   }
 }
