[FEAT] Add TypeScript

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=16.0.0"
   },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier": "prettier --write \"./**/*.{js,md,yml,ts}\"",
     "format-check": "prettier --list-different \"./**/*.{js,md,yml,ts}\""
@@ -30,6 +31,7 @@
     "@actions/github": "^5.1.1"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4"
   }
 }
