--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@actions/github": "^5.1.1"
   },
   "devDependencies": {
+    "@types/node": "^20.2.4",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
   }
