--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
+    "@vercel/ncc": "^0.36.1",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
   }
