--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,25 @@ name: Issue Needs Attention
 on:
   issue_comment:
     types: created
+
+permissions:
+  contents: read
+
 jobs:
   applyNeedsAttentionLabel:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      issues: write # for hramos/needs-attention to label issues
     name: Apply Needs Attention Label
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Apply Needs Attention Label
-        uses: hramos/needs-attention@v1
+        uses: hramos/needs-attention@v2.0.0-rc.1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          # response-required-label: 'Needs Author Feedback' # <- Default
+          # needs-attention-label: 'Needs Attention' # <- Default
         id: needs-attention
       - name: Result
         run: echo '${{ steps.needs-attention.outputs.result }}'
